authorization and regitration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=facimath
+
+jwt.secret=feargnivrmiugiu6mhc57hrytbmx,8cyvhgmgugbivcojbovijhcocvhu ngbuyh96uywpeo5jveuhvu5hcyiu5hbyrvuyiufnguybnif`e,nfgmjknmdivuhlirjmgoifw,k304i,t
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/facimath
+spring.datasource.username=postgres
+spring.datasource.password=Sanyagavr11
+spring.datasource.driver-class-name=org.postgresql.Driver
