don`t forget enter password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ jwt.secret=feargnivrmiugiu6mhc57hrytbmx,8cyvhgmgugbivcojbovijhcocvhu ngbuyh96uyw
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/facimath
 spring.datasource.username=postgres
-spring.datasource.password=Sanyagavr11
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
